# disquip-bot-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  leaders.csv  run.sh
src/: civ.rs  main.rs
