[package]
name = "disquip-bot-rs"
version = "0.1.2"
edition = "2024"

[dependencies]
serenity = {version = "0.12", features = ["client", "standard_framework", "voice"] }
poise = { version = "0.6" }
songbird = { version = "0.5", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["mp3"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
