[package]
name = "disquip-bot-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.4"
rand = "0.9"
serenity = {version = "0.12", features = ["client", "standard_framework", "voice"] }
poise = { version = "0.6" }
songbird = { version = "0.5", features = ["builtin-queue"] }
symphonia = { version = "0.5", features = ["mp3"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
